feat: service metadata
